# chronoxus

./: Cargo.toml  Dioxus.toml
.github/workflows/: rust.yml
assets/: inputs.css  main.css  months.css
docs/: index.html
docs/assets/: chronoxus-10a2b6c6d8af0bab.js  chronoxus-10a2b6c6d8af0bab.js.br  chronoxus-46acf768743f9aa0.js  chronoxus-46acf768743f9aa0.js.br  chronoxus-ee6bdc9cb3c0e8b4.js  chronoxus-ee6bdc9cb3c0e8b4.js.br  chronoxus_bg-ae99569dab46a8ba.wasm  chronoxus_bg-ae99569dab46a8ba.wasm.br  chronoxus_bg-d424926d9eaffba3.wasm  chronoxus_bg-d424926d9eaffba3.wasm.br  inputs-584fc5a2553cac99.css  inputs-584fc5a2553cac99.css.br  main-ab214f2d95ddee8b.css  main-ab214f2d95ddee8b.css.br  main-c4223fa4bfb991fc.css  main-c4223fa4bfb991fc.css.br  months-5363b508e310f057.css  months-5363b508e310f057.css.br
docs/public/: index.html
docs/public/assets/: chronoxus_bg-db8e9f3b6efc240e.wasm  chronoxus_bg-db8e9f3b6efc240e.wasm.br  main-984ac94716a7b4b0.css  main-984ac94716a7b4b0.css.br
src/: calendar.rs  calendar_grid.rs  header.rs  inputs.rs  main.rs  months.rs
